fix botton scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,26 @@ main{
   
 
 
+#scrollTopButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    width: 100px;
+    height: 40px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+#scrollTopButton.show {
+    display: block;
+  }
+  
+
 
 /* Estilos responsive */
 
